fix align panel dropdown

--- a/src/components/panel_container/style.css
+++ b/src/components/panel_container/style.css
@@ -25,6 +25,7 @@
 .panel > .actions {
   display: flex;
   flex-shrink: 0;
+  align-items: center;
   justify-content: flex-end;
   padding: 10px var(--panel-padding);
 }
